<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 Zhihu Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:paddingEnd="18dp"
        android:paddingRight="18dp"
        android:paddingStart="17dp"
        android:paddingLeft="17dp"
        android:background="@color/color_fafafa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sc_all_photo_tv"
            android:textSize="15dp"
            android:textColor="@color/color_333333"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/sc_pa_all_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:id="@+id/sc_photo_title_tv"
            android:textSize="18dp"
            android:textColor="@color/color_333333"
            android:layout_centerInParent="true"
            android:text="@string/sc_pa_carmea_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sc_photo_cancel"
            android:textSize="15dp"
            android:textColor="@color/color_333333"
            android:text="@string/sc_pa_cancel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <!--底部操作栏-->
    <FrameLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_ffffff"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/button_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:foreground="?selectableItemBackground"
            android:padding="17dp"
            android:text="@string/button_preview"
            android:textColor="@color/color_30000000"
            android:textSize="15sp" />

        <LinearLayout
            android:padding="16dp"
            android:id="@+id/originalLayout"
            android:visibility="visible"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:foreground="?selectableItemBackground"
            android:layout_height="wrap_content"
            tools:showIn="@layout/activity_matisse">


            <com.zhihu.matisse.internal.ui.widget.CheckRadioView
                android:id="@+id/original"
                android:src="@drawable/ic_preview_radio_off"
                android:layout_gravity="center_vertical"
                android:layout_width="18dp"
                android:layout_height="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="true"
                android:paddingStart="6dp"
                android:paddingLeft="6dp"
                android:text="@string/button_original"
                android:textColor="@color/color_000000"
                android:textSize="14sp" />

        </LinearLayout>



        <TextView
            android:id="@+id/button_apply"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:layout_gravity="end|center"
            android:background="@drawable/zhihu_send_btn_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="11dp"
            android:paddingEnd="11dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textColor="@color/color_ffffff"
            android:text="@string/button_sure"
            android:textSize="13sp" />


    </FrameLayout>

    <!-- 内容-->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/toolbar"
        android:visibility="gone" />

    <!--空内容-->
    <FrameLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/toolbar"
        android:visibility="gone">

        <TextView
            android:id="@+id/empty_view_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/empty_text"
            android:textSize="16sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/album_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>